[gd_scene load_steps=7 format=3 uid="uid://bkg17ao76swlq"]

[ext_resource type="Script" path="res://Elements/main.gd" id="1_qlt8a"]
[ext_resource type="Theme" uid="uid://b0f6o3jmgrqt" path="res://resources/theme.tres" id="2_tfy1f"]
[ext_resource type="ButtonGroup" uid="uid://cwlay0majv5p2" path="res://resources/poles.tres" id="3_xun7a"]
[ext_resource type="Texture2D" uid="uid://cx2xuuotosie" path="res://assets/back.png" id="4_lbv0y"]
[ext_resource type="Shader" uid="uid://b06mqbbofqqob" path="res://resources/mouse.tres" id="4_lnhq8"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mxn5w"]
shader = ExtResource("4_lnhq8")

[node name="Main" type="CanvasLayer"]
script = ExtResource("1_qlt8a")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -28.0
offset_right = 80.0
offset_bottom = 28.0
grow_vertical = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="BattingScore" type="Label" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_tfy1f")
text = "积分：0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BattingCount" type="Label" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_tfy1f")
text = "次数：0"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -102.0
offset_bottom = 102.0
grow_horizontal = 0
grow_vertical = 2

[node name="HigtPole" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_tfy1f")
toggle_mode = true
button_pressed = true
button_group = ExtResource("3_xun7a")
text = "高杆"

[node name="MediumPole" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_tfy1f")
toggle_mode = true
button_group = ExtResource("3_xun7a")
text = "中杆"

[node name="LowPole" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_tfy1f")
toggle_mode = true
button_group = ExtResource("3_xun7a")
text = "低杆"

[node name="JumpPole" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_tfy1f")
toggle_mode = true
button_group = ExtResource("3_xun7a")
text = "跳杆"

[node name="LevelComplete" type="PanelContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -135.0
offset_top = -63.5
offset_right = 135.0
offset_bottom = 63.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_tfy1f")

[node name="VBoxContainer" type="VBoxContainer" parent="LevelComplete"]
layout_mode = 2

[node name="Label" type="Label" parent="LevelComplete/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_tfy1f")
theme_override_font_sizes/font_size = 90
text = "过关啦"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="LevelComplete/VBoxContainer"]
layout_mode = 2

[node name="Restart" type="Button" parent="LevelComplete/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "重来
"

[node name="Next" type="Button" parent="LevelComplete/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "下一关"

[node name="Back" type="Button" parent="."]
material = SubResource("ShaderMaterial_mxn5w")
offset_left = 8.0
offset_top = 8.0
offset_right = 528.0
offset_bottom = 528.0
scale = Vector2(0.18, 0.18)
theme = ExtResource("2_tfy1f")
icon = ExtResource("4_lbv0y")
flat = true

[connection signal="button_down" from="VBoxContainer/HigtPole" to="." method="_on_higt_pole_button_down"]
[connection signal="button_down" from="VBoxContainer/MediumPole" to="." method="_on_medium_pole_button_down"]
[connection signal="button_down" from="VBoxContainer/LowPole" to="." method="_on_low_pole_button_down"]
[connection signal="button_down" from="VBoxContainer/JumpPole" to="." method="_on_jump_pole_button_down"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
